--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -23,10 +23,10 @@ spec:
           ports: 
             - name: vprodb-port
               containerPort: 3306
-          env: 
+          env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
-                secreetKeyRef: 
+                secretKeyRef: 
                   name: app-secret
                   key: db-pass
       nodeSelector: 
