--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -35,7 +35,7 @@ spec:
         - name: vpro-db-data
           awsElasticBlockStore:
             volumeID: vol-0946eeb5903538cef
-            fstype: ext4
+            fsType: ext4
       initContainers: 
         - name: busybox
           image: busybox:latest
