--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -17,6 +17,8 @@ spec:
       containers: 
         - name: vprodb
           image: vprofile/vprofiledb:V1
+          args:
+            - "--ignore-db-dir=lost+found"
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: vpro-db-data
@@ -36,10 +38,10 @@ spec:
           awsElasticBlockStore:
             volumeID: vol-0415e386639e997fa
             fsType: ext4
-      initContainers: 
-        - name: busybox
-          image: busybox:latest
-          args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
-          volumeMounts:
-            - name: vpro-db-data
-              mountPath: /varl/lib/mysql
+ #     initContainers: 
+  #      - name: busybox
+   #       image: busybox:latest
+    #      args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
+     #     volumeMounts:
+      #      - name: vpro-db-data
+       #       mountPath: /varl/lib/mysql
