--- a/rmq-dep.yaml
+++ b/rmq-dep.yaml
@@ -25,6 +25,6 @@ spec:
             valueFrom: 
               secretKeyRef:
                 name: app-secret
-                key: rmq_pass
+                key: rmq-pass
           - name: RABBBITMQ_DEFAULT_USER
             value: "guest"
