--- a/vproappdep.yaml
+++ b/vproappdep.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: vproapp
-        image: vprofile/vprofileapp:V!
+        image: vprofile/vprofileapp:V1
         ports:
           - name: vproapp-port
             containerPort: 8080
