--- a/vproappdep.yaml
+++ b/vproappdep.yaml
@@ -20,10 +20,10 @@ spec:
         ports:
           - name: vproapp-port
             containerPort: 8080
-      initContainers:
-        - name: init-mydb
-          image: busybox
-          command: ['sh', 'c', 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
-        - name: init-memcache
-          image: busybox
-          command: ['sh', 'c', 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
+#      initContainers:
+ #       - name: init-mydb
+  #        image: busybox
+   #       command: ['sh', 'c', 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
+    #    - name: init-memcache
+     #     image: busybox
+      #    command: ['sh', 'c', 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
